[project]
name = "rlhub"
version = "0.1.0"
description = "RL Hub Python Framework"
authors = [{ name = "Jonathan Jaegerman", email = "jonathan.jaegerman@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
keywords = [
    "rlhub",
    "reinforcement learning hub",
]
dependencies = [
    "temporalio>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/jjaegerman/rlhub"
Repository = "https://github.com/jjaegerman/rlhub"
